cabal-version:       >=1.10
name:                Tabulyst
version:             0.1.0.0
build-type:          Simple

executable Tabulyst
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
    base >=4.14 && <5,
    bytestring,
    text,
    vector,
    cassava,
    filepath,
    directory,
    containers,
    sqlite-simple
  default-language:    Haskell2010
